# eagine-oalplus

./: .ycm_extra_conf.py  CMakeLists.txt  README.rst
config/: EAGinePackageOALplus.cmake  FindEAGineAL.cmake
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.py.in
doc/doxygen/include/: oalplus.hpp
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
docker/deb_test/dev/example/: CMakeLists.txt  basic_info.cpp
example/eagine/: CMakeLists.txt
example/eagine/oalplus/: 001_basic_info.cpp  002_list_devices.cpp  003_list_extensions.cpp  004_context_info.cpp  005_hello_world.cpp  CMakeLists.txt  deb-changelog
include/: CMakeLists.txt  Sources.cmake
include/eagine/oalplus/: al.hpp  al_api.hpp  al_api.inl  al_api_fwd.hpp  alc_api.hpp  alc_api.inl  alc_api_fwd.hpp  alut_api.hpp  alut_api.inl  alut_api_fwd.hpp  basic_al_api.hpp  basic_alc_api.hpp  basic_alut_api.hpp
include/eagine/oalplus/al_api/: api.hpp  api.inl  api_traits.hpp  api_traits.inl  c_api.hpp  c_api.inl  config.hpp  constants.hpp  constants.inl  enum_class.hpp  enum_types.hpp  object_name.hpp  objects.hpp  result.hpp
include/eagine/oalplus/alc_api/: api.hpp  api.inl  api_traits.hpp  api_traits.inl  c_api.hpp  c_api.inl  config.hpp  constants.hpp  constants.inl  context_attribs.hpp  enum_class.hpp  enum_types.hpp  objects.hpp  result.hpp
include/eagine/oalplus/alut_api/: api.hpp  api.inl  api_traits.hpp  c_api.hpp  c_api.inl  config.hpp  constants.hpp  constants.inl  enum_class.hpp  enum_types.hpp  result.hpp
include/eagine/oalplus/config/: basic.hpp
source/: CMakeLists.txt
source/lib/: CMakeLists.txt
source/lib/eagine-oalplus/: CMakeLists.txt
source/modules/eagine/: CMakeLists.txt  deb-changelog  oalplus.cpp
source/modules/eagine/al/: CMakeLists.txt  al.cpp  api.cpp  api_traits.cpp  c_api.cpp  config.cpp  constants.cpp  constants_impl.cpp  constants_test.cpp  enum_types.cpp  from_string.cpp  math.cpp  objects.cpp  result.cpp
source/modules/eagine/alc/: CMakeLists.txt  alc.cpp  api.cpp  api_traits.cpp  attributes.cpp  c_api.cpp  config.cpp  constants.cpp  enum_types.cpp  objects.cpp  result.cpp
source/modules/eagine/alut/: CMakeLists.txt  alut.cpp  api.cpp  api_traits.cpp  c_api.cpp  config.cpp  constants.cpp  enum_types.cpp  result.cpp
